updated imba and added link to repo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div id="top"></div>
     <div id="analysis"></div>
     <div id="apps"></div>
-    
+    <footer>
+     More details at <a href="https://github.com/somebee/todomvc-render-benchmark">GitHub</a>
+    </footer>
     <script src="resources/loader.js"></script>
   </body>
 
