--- a/todomvc/imba/index.html
+++ b/todomvc/imba/index.html
@@ -17,9 +17,7 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 
-		<!-- <script src="node_modules/todomvc-common/base.js"></script> -->
-		
-		<script src="js/imba.js"></script>
+		<script src="js/imba.min.js"></script>
 		<script src="js/todoModel.js"></script>
 		<script src="js/todoItem.js"></script>
 		<script src="js/app.js"></script>
