--- a/todomvc/imba-dev/index.html
+++ b/todomvc/imba-dev/index.html
@@ -3,23 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Imba • TodoMVC</title>
-		<link rel="stylesheet" href="external/todomvc-common/base.css">
-		<link rel="stylesheet" href="external/todomvc-app-css/index.css">
-		<link rel="stylesheet" href="../../resources/app.css">
-		<script src="../../resources/api.js"></script>
+		<link rel="stylesheet" href="../../resources/shared/app.css">
+		<script src="../../resources/shared/api.js"></script>
 	</head>
 	<body>
-		<script src="js/api.js"></script>
 		<section class="todoapp"></section>
-		<footer class="info">
-			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="http://github.com/somebee/">Sindre Aarsaether</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</footer>
-
-		<script src="js/imba.min.js"></script>
-		<script src="js/todoModel.js"></script>
-		<script src="js/todoItem.js"></script>
-		<script src="js/app.js"></script>
+		<script src="js/bundle.js"></script>
 	</body>
 </html>
