--- a/todomvc/imba-dev/index.html
+++ b/todomvc/imba-dev/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<section class="todoapp"></section>
-		<script src="js/bundle.js"></script>
+		<script src="app.js"></script>
 	</body>
 </html>
