--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <script src="resources/lodash.js"></script>
     <script src="resources/benchmark.js"></script>
     <link rel="stylesheet" href="css/interface.css">
+    <link rel="stylesheet" href="client.css">
   </head>
   <body>
-    <div id="controls"></div>
+    <!-- <div id="controls"></div>
     <div id="top"></div>
     <div id="analysis"></div>
-    <div id="apps"></div>
-    <footer>
-     More details at <a href="https://github.com/somebee/todomvc-render-benchmark">GitHub</a>
-    </footer>
-    <script src="resources/loader.js"></script>
+    <div id="apps"></div> -->
+    <script src="client.js"></script>
   </body>
 
 </html>
