--- a/todomvc/vue-2.5/index.html
+++ b/todomvc/vue-2.5/index.html
@@ -51,7 +51,7 @@
 		    </button>
 		  </footer>
 		</section>
-		<script src="https://unpkg.com/vue@2.5.13/dist/vue.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.min.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
